# sgd

./: README.md
01_hello_sdl/: CMakeLists.txt  README.md
01_hello_sdl/src/: a.out  main.cpp
bullethell/: CMakeLists.txt  README.md
bullethell/src/: animation.hpp  bmpfont.hpp  main.cpp  main.hpp  vectors.hpp
